# vio

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  MEMORY-FLOW-REVIEW.md  README.md  sanitizer-ignorelist.txt
.github/workflows/: ci.yml  docker.yml
CMake/: 3rdPartyPackages.cmake  Build3rdParty.cmake  BuildExternal.cmake  BuildExternalTargetLinkLibrary.cmake  Fetch3rdParty.cmake  FetchDependencies.cmake  GetPackageInstallDir.cmake  vioConfig.cmake.in
CMake/FindPackage/libressl/: Findlibressl.cmake
build-asan/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  compile_commands.json
build-asan/examples/: CTestTestfile.cmake  cmake_install.cmake
build-asan/libressl_4.3.2_install/lib/cmake/LibreSSL/: LibreSSL-Crypto-debug.cmake
build-asan/libressl_4.3.2_install/lib/pkgconfig/: libssl.pc  libtls.pc
build-asan/libressl_build_4.3.2/src/libressl-build/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  LibreSSL-Crypto.cmake  LibreSSL-SSL.cmake  LibreSSL-TLS.cmake  build.ninja  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt
build-asan/libressl_build_4.3.2/src/libressl-build/crypto/: CTestTestfile.cmake  cmake_install.cmake
build-asan/libressl_build_4.3.2/src/libressl-build/include/: CTestTestfile.cmake  cmake_install.cmake
build-asan/libressl_build_4.3.2/src/libressl-build/man/: CTestTestfile.cmake  cmake_install.cmake
build-asan/libressl_build_4.3.2/src/libressl-build/pkgconfig/: libcrypto.pc  openssl.pc
build-asan/libressl_build_4.3.2/src/libressl-build/ssl/: CTestTestfile.cmake  cmake_install.cmake  ssl.ver
build-asan/libressl_build_4.3.2/src/libressl-stamp/: libressl-build-Debug.cmake  libressl-install-Debug.cmake
build-asan/libressl_build_4.3.2/tmp/: libressl-cfgcmd.txt  libressl-mkdirs.cmake
build-asan/src/: cmake_install.cmake
build-asan/src/__cmrc_vio_default_certs/: lib_.cpp
build-asan/test/: CTestTestfile.cmake  cmake_install.cmake
build-crypto/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  compile_commands.json
build-crypto/libressl_4.1.0_install/lib/pkgconfig/: libcrypto.pc  libtls.pc
build-crypto/libressl_build_4.1.0/src/libressl-build/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  LibreSSL-Crypto.cmake  LibreSSL-SSL.cmake  LibreSSL-TLS.cmake  LibreSSLConfig.cmake  build.ninja  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt
build-crypto/libressl_build_4.1.0/src/libressl-stamp/: libressl-build-Debug.cmake  libressl-install-Debug.cmake  libressl-source_dirinfo.txt
build-crypto/libressl_build_4.1.0/tmp/: libressl-cfgcmd.txt  libressl-mkdirs.cmake
build-crypto/src/: cmake_install.cmake
build-crypto/test/: CTestTestfile.cmake  cmake_install.cmake
build-linux/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  compile_commands.json
build-linux/examples/: CTestTestfile.cmake  cmake_install.cmake
build-linux/libressl_4.3.2_install/lib/pkgconfig/: libcrypto.pc
build-linux/libressl_build_4.3.2/src/libressl-build/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  LibreSSL-Crypto.cmake  LibreSSL-SSL.cmake  LibreSSL-TLS.cmake  LibreSSLConfig.cmake  build.ninja  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt
build-linux/libressl_build_4.3.2/src/libressl-stamp/: libressl-build-Release.cmake  libressl-install-Release.cmake  libressl-source_dirinfo.txt
build-linux/libressl_build_4.3.2/tmp/: libressl-cfgcmd.txt  libressl-mkdirs.cmake
build-linux/src/: cmake_install.cmake
build-linux/test/: CTestTestfile.cmake  cmake_install.cmake
examples/: CMakeLists.txt  awaitable_event_pipe.cpp  dns_resolve.cpp  file_copy.cpp  hello_timer.cpp  https_fetch.cpp  https_get.cpp  tcp_echo.cpp  tcp_read_into.cpp  udp_echo.cpp
src/: CMakeLists.txt  crypto.cpp  crypto_encoding.cpp  crypto_sha256.cpp  library.cpp  library_wasm.cpp  worker.cpp
src/vio/: about_to_block.h  auto_closer.h  awaitable_event_pipe.h  bit_mask.h  cancellation.h  crypto.h  data_wrapper.h  dynamic_bitset.h  elastic_index_storage.h  error.h  event_loop.h  event_pipe.h  handle_closer.h  ref_counted_wrapper.h  ref_ptr.h  ring_buffer.h  run.h  socket_stream.h  ssl_backend.h  ssl_config.h  ssl_config_t.h  ssl_context.h  ssl_engine.h  task.h  thread_pool.h  unique_buf.h  uv_coro.h  vio_export.h  worker.h
src/vio/detail/: sha2_portable.h
src/vio/objstore/: azure_object_store.h  create_object_store.h  file_object_store.h  http_object_store.h  memory_object_store.h  object_store.h  objstore.h  s3_object_store.h  signing.h
src/vio/operation/: dns.h  file.h  generated_operations.h  http_client.h  sleep.h  ssl.h  ssl_client.h  ssl_common.h  ssl_server.h  tcp.h  tcp_server.h  tls_client.h  tls_common.h  tls_server.h  udp.h  work.h
src/vio/platform/uv/: event_loop_impl.h  event_pipe_impl.h  ref_counted_impl.h  sleep_impl.h
src/vio/platform/wasm/: cooperative_runtime.h  event_loop_impl.h  event_pipe_impl.h  http_fetch_impl.h  ref_counted_impl.h  sleep_impl.h
test/: CMakeLists.txt  leak_check.h  require_expected.h  test_basic.cpp  test_ca_certificates.cpp  test_cancellation.cpp  test_crypto.cpp  test_dns.cpp  test_dns.h.cpp  test_dns_leak.cpp  test_elastic_index_storage.cpp  test_event_pipe.cpp  test_event_pipe_drain.cpp  test_file.cpp  test_file_leak.cpp  test_handle_closer.cpp  test_handle_closer.cpp.bak  test_http_client.cpp  test_main.cpp  test_objstore.cpp  test_reader_cancel.cpp  test_ref_counted_wrapper.cpp  test_ring_buffer.cpp  test_ssl.cpp  test_ssl_alpn.cpp  test_ssl_config.cpp  test_ssl_deep.cpp  test_ssl_sni.cpp  test_ssl_upgrade.cpp  test_task_and_sleep.cpp  test_tcp.cpp  test_tcp_read_cb.cpp  test_tcp_read_into.cpp  test_tcp_server_listen.cpp  test_tcp_write_guard.cpp  test_thread_pool.cpp  test_tls_server.cpp  test_udp.cpp  test_work.cpp  tls_test_helpers.h
test/ssl_debug_server/: ca.crt  ca.key  ca.srl  run_client.sh  run_server.sh  server.crt  server.csr  server.key
(+34 files in other folders)
