function(add_vio_example name)
    add_executable(${name} ${name}.cpp)
    BuildExternalTargetLinkLibrary(${name} PRIVATE vio LibreSSL::TLS LibreSSL::SSL LibreSSL::Crypto)
    target_include_directories(${name} PRIVATE ${CMAKE_SOURCE_DIR}/src)
endfunction()

add_vio_example(tcp_echo)
add_vio_example(https_get)
add_vio_example(https_fetch)
add_vio_example(udp_echo)
add_vio_example(dns_resolve)
add_vio_example(file_copy)
add_vio_example(awaitable_event_pipe)
